syntax = "proto3";
package impl.provider.localSecp256k1;

option go_package = "/crypto/localSecp256k1";

message LocalSecp256k1{
  string name = 1;
  string type = 2;
  string slot = 3;
  bytes PubKey = 4;
  bytes PrivKey = 5;
}